# backend

./: .gitignore  Cargo.toml
migrations/2021-04-29-072326_create_users/: up.sql
migrations/2021-04-29-072342_create_tasks/: down.sql  up.sql
src/: cli.rs  errors.rs  lib.rs  main.rs  schema.rs  vars.rs
src/api/: mod.rs  register_handle.rs  user_handle.rs
src/database/: mod.rs  user.rs
src/utils/: auth_service.rs  email_service.rs  mod.rs
tests/: health_check.rs  user_handle_check.rs  utils.rs
